scrollbar problem solved

--- a/styles/style.css
+++ b/styles/style.css
@@ -615,12 +615,13 @@ footer {
   .habit-contents-section {
     flex-direction: column;
     margin: auto;
-    gap: 30px;
+    gap: 2rem;
   }
   .run-section {
     flex-direction: column;
     margin-top: 400px;
     height: 100%;
+    width: 100%;
   }
   .run-image img {
     width: 100%;
@@ -682,13 +683,13 @@ footer {
   }
   footer {
     height: 100%;
+    width: 100%;
   }
   .footer-content {
     flex-direction: column;
     width: 100%;
     height: 100%;
     margin: auto;
-    margin-left: 50px;
-    align-items: start;
+    align-items: center;
   }
 }
